llvm/test/tools/llubi/infinite_loop.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose --max-steps 10 < %s 2>&1 | FileCheck %s

define void @main() {
entry:
  br label %loop

loop:
  br label %loop
}
; CHECK: Entering function: main
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT:   br label %loop jump to %loop
; CHECK-NEXT: Error: Exceeded maximum number of execution steps.
; CHECK-NEXT: error: Execution of function 'main' failed.
